코틀린 6장 완료

--- a/책/kotlin-in-action/6. 코틀린 타입 시스템.md
+++ b/책/kotlin-in-action/6. 코틀린 타입 시스템.md
@@ -131,3 +131,178 @@ class StringPrinter2: StringProecssor {
 - 코틀린에서 자바 메소드를 사용할 경우 널 가능성을 제대로 처리하는 일이 중요하다.
 - 구현 메소드를 다른 코틀린 코드가 호출할 수 있으므로 코틀린컴파일러는 널이 될 수 없는 타입으로 선언한 모든 파라미터에 대해 널이 아님을 검사하는 단언문을 만들어준다.
     + 자바 코드가 그 메소드에게 널 값을 넘길 경우 이 단언문이  발동되 예외가 발생하게 된다.
+
+
+> 6.2 코틀린의 원시 타입
+
+### 원시타입 
+- 코틀린은  원시타입과  래퍼타입을  구분하지 않으므로 항상 같은 타입을 사용한다.
+- 코틀린은 실행시점에 가능한 가장  효율적인 방식으로 타입에 대해 표현한다.
+- 대부분의 경우(변수, 프로퍼티, 파라미터 등) 코틀린의 Int 타입은 자바의 int 타입으로 변환된다.
+- 위같은 사항이 불가능한 경우는 제네릭이나 컬렉션에 사용하는 경우다.
+```kotlin
+val i:Int = 10
+```
+
+### 널이 될 수 있는 원시 타입
+- Int? Boolean?  등으로  표현되면 자바 원시타입으로 설정될 수 없다. (null 이 들어가야 하기 때문이다.)
+- 컬렉션이나 제네릭을 사용하면 원시타입을 사용할 수 없다.
+- JVM은 타입 인자로 원시 타입을 허용하지 않기 때문이다.
+
+
+### 숫자 변환
+- 코틀린과 자바의 가장 큰 차이점은 숫자를 변환하는  방식이다.
+- 코틀린은 한  타입의 숫자를 다른  타입의 숫자로 자동 변환하지 않는다.
+- boolean을 제외한 모든 원시타입에 대해 혼란을 피하기위해  변환 함수를 제공한다.
+- 동시에 여러 숫자  타입을 허용하려면 명시적으로 변환해야 한다.
+- 숫자 타입 리터럴은  보통 변환 함수를 호출 안해도 된다. 컴파일러가 자동으로  변환한다.
+```kotlin
+val  i = 1
+val l:Long  =  i // 컴파일 에러
+
+val  i =  1
+val l: Long = i.toLong()
+
+val x = 1
+x in ListOf(1L, 2L, 3L) // false
+
+val y = 1L
+y in ListOf(1L, 2L, 3L) // true
+```
+
+### Any 최상위 타입
+- 자바에서 object가 최상위 타입이듯, 코틀린에서 any는 모든 널이 될수 없는 타입의 조상이다.
+- 자바에서는 Object의 원시타입은 계층에 포함되지 않지만, 코틀린에서는 Any가 Int등의 원시타입을 포함한 모든 타입의 조상 타입이다.
+- 내부에서 Any 타입은 java.lang.Object에 대응된다.
+```kotlin
+val answer:Any = 42  // 42가 박싱된다.
+```
+
+### Unit 타입: 코틀린의 void
+- 코틀린 Unit 타입은  자바 void와 같은 기능을 한다.
+- 구분하자면 Unit은 모든 기능을  갖는 일반적인 타입이며, void와 달리 Unit타입 인자로 쓸 수 있다.
+- Unit 타입에 속한 값은 단 하나뿐이며 그 이름도 Unit 이다.
+- 함수형 프로그래밍에서 Unit은 단 하나의 인스턴스만 같는 타입을 의미하며, Void와 구분된다.
+```kotlin
+fun f(): Unit {...} //같은함수
+fun f() {}
+
+```
+
+### Nothing: 이 함수는 결코 정상적으로 끝나지 않는다.
+- 코틀린에는 결코 성공적으로 값을 돌려주는 일이 없으므로 반환 값이라는 개념 자체가 의미 없는 함수가 일부 존재한다.
+- 테스트에 실패하는 경우가 대표적인데, 정상적으로 끝나지 않는 사실에 주목한다.
+- nothing 타입은 아무것도 포함하지 않는다. 따라서 nothing은 함수의 반환 타입이나 반환타입으로 쓰일 타입  파라미터로만 쓸 수 있다.
+```kotlin
+fun fail(message:String): Nothing {
+    throw IllegalStateException("error")
+
+val address = city.address ?: fail("null address") // nothing을 반환하는 함수는 엘비스 연산자를 통해 전제조건을 검사할 수 있고 이는 유용하다.
+}
+```
+
+> 6.3 컬렉션과 배열
+
+###  널 가능성과 컬렉션
+- 타입 시스템의 일관성을 지키기 위해 널 가능성을 고려하는 것은 필수적이다.
+```kotlin
+fun readNumbers(reader:BufferedReader) : List<Int?> {...}
+```
+
+- List<Int>? 와 List<Int?> 의 비교 : 원소의 값이 null 이 될 수 있느냐, 컬렉션이 널이 될 수 있느냐의 차이
+- 이런 널 가능성에 대해 filterNotNull 이라는 표준 함수를 제공한다.
+```kotlin
+fun addValidNumbers(number: List<Int?>) {
+    val validNumbers = numbers.filterNotNull()
+    println(validNumbers.sum())
+}
+```
+- filterNotNull이 컬렉션 안에 널이 있지 않음을 보장하므로 반환 타입은 List<Int> 이다.
+
+### 읽기 전용과  변경 가능한 컬렉션
+- 코틀린 컬렉션과 자바 컬렉션을 나누는 가장 중요한 특성 하나는 코틀린에서는 컬렉션 안의 데이터에 접근하는 인터페이스와 컬렉션 안의 데이터를 변경하는 인터페이스를 분리했다는 점이다.
+    + Collection(읽기전용), MutableCollection(변경가능)
+- 변경 불가능한 컬렉션에 읽기 전용 컬렉션을 넘길 수 없다.
+- 읽기 전용 컬렉션이라고 해서 꼭 변경 불가능한 컬렉션일 필요는 없다.
+    + 같은 컬렉션 객체를 읽기 전용, 변경가능한 컬렉션이 참조할 수 있다.
+    + 이런 상황에서 코드를 호출하는 도중 병렬로 객체의 원소를 변경한다면 쓰레드에 안전하지 않을 수 있다.
+    
+### 코틀린 컬렉션과 자바
+- 모든 코틀린 컬렉션은 그에 상응하는 자바 컬렉션 인터페이스의 인스턴스이다.
+![img](https://miro.medium.com/max/723/1*ESQLaTW4nDxgMvMeSZk0mg.png)
+- 코틀린의 읽기 전용과 변경 가능 인터페이스의  기본 구조는 java.util 패키지에있는 자바 컬렉션 인터페이스 구조를 그대로 옮겨놓았다.
+- 코틀린을  통해 자바  컬렉션을 호출한다면, 읽기전용 및 변경가능한 컬렉션 둘다 넘길 수 있다.
+    + 이로 인해 문제가 생기는 점은 코틀린에서 막을 수 없다.
+```kotlin
+public static List<String> toUpper(List<String> list)  { list.set..}
+
+fun printlnUpperCase(list: List<String>)  // 읽기 전용 {
+    toUpper(list)
+}  
+```    
+- 위와 같은  함점은 널이 아닌 원소로 이뤄진 컬렉션  타입에서도  발생한다.
+    + 널을 넣을 수 없는 컬렉션을 넣었느데, 자바에서 널을 넣는다던가 할 수  있다.
+    
+### 컬렉션을 플랫폼 타입으로 다루기
+- 플랫폼 타입은 자바  코드에서  정의한 타입 정도
+
+- 코틀린 쪽에는 널 관련  정보가 없다.즉 플랫폼 타입인 컬렉션은 기본적으로 변경 가능성에 대해 알수가 없다.
+    + 따라서 코틀린 코드는  타입을 읽기 전용  컬렉션이나 변경 가능한 컬렉션 어느쪽으로든 다룰 수 있다.
+    
+- 하지만 컬렉션 타입이 시그니처가 들어간 자바 메소드 구현을 오버라이드 하는  경우 읽기 전용과 변경 가능 컬렉션 차이의 문제가 된다.
+
+- 플랫폼 타입에서 널을 다루던것 처럼 오버라이드 하려는 메소드의 자바 컬렉션 타입을 어떤 콜력센 타입을 어떤코톨린 컬렉션 타입으로 표현할지 결정해야 한다.
+- 즉 플랫폼 타입에 대해 컬렉션을 구현하는 쪽에 책임이 있으며, 다음과 같은 조건을 코틀린에서 고려해야한다.
+    + 컬렉션이 널이 될 수 있는가?
+    + 컬렉션의 원소가 널이 될 수 있는가?
+    + 오버라이드하는 메소드가 컬렉션을  변경할 수 있는가?
+    
+    
+- 예 1)    
+```kotlin
+interface FileContentProcessor {
+    // 일부 파일은 이진 파일이며, 텍스트 list는 널이 될 수 있다.
+    // 파일의 각줄은 널일 수 없으므로 리스트의 원소는 널이 될 수 ㅓㅂㅅ다.
+    // 읽기만 하면 되므로 읽기전용으로 구현하면 된다
+    void processContents(File path,  byte[] binaryContents, List<SString> textContents);
+}
+
+class  FileIndexer: FileContentProcessor {
+    override fun processContents(path: File,  binaryContents: ByteArray?, textContents: List<String>?)
+}
+```         
+        
+- 예 2)
+```kotlin
+interface DataParser<T> {
+    //List<String>은 널이 되서는 안되며, 변경 가능해야 한다.
+    // error의 원소는 널이 될 수 있다.
+    void parseData(String input, List<T> output, List<String> errors);
+}
+
+class PersonParser: DataParser<Person> {
+    override fun parseData(input:String, output:MutableList<Person>, errors:MutableList<String?>)
+}
+```    
+
+
+### 객체의 배열과 원시타입의 배열
+- 코틀린에서 배열을 만드는 방법
+    +  arrayOf 함수
+    + arrayOfNulls 함수 (모든 원소가 널로 채워짐)
+    +  Array 생성자는 배열크기와 람다를 인자로 받아서 생성
+```kotlin
+val letters = Array<String>(26) {i -> ('a'+i).toString()} // ex1)
+
+val strings = listOf("a", "b", "c")
+println("%s/%s/%s".format(*strings.toTypeArray())) // varargs 넘기기 위해 * 연산자 사용
+```        
+- 다른 제네릭 타입에서 처럼 배열 타입의 타입 인자도 항상 원시타입이  아닌 객체타입이 된다.
+    + 즉 Array<Int>  -> 박싱된 정수의 배열 (자바의 Integer)
+- 박싱하지  않은 원시타입이 필요하면  특별한 배열 클래스를 사용해야한다.
+    + IntArray, ByteArray, CharArray 등 -> int[], byte[] .. 식으로 컴파일 된다.
+```kotlin
+val fiveZeros = IntArray(5)
+val fiveZerosTwo = IntArrayOf(0,0,0,0,0)
+```        
+- 이밖에 박싱된 array를 toIntArray 등의 변환 함수를 사용해 박싱하지 않은 값이 들어있는 배열로 변환할 수 있다.
