--- a/책/kotlin-in-action/7. 연산자오버로딩과 기타관례.md
+++ b/책/kotlin-in-action/7. 연산자오버로딩과 기타관례.md
@@ -72,3 +72,60 @@ val list = arrayListOf(1,2)
 list += 3   //  list += 는 list의 상태를 변경시킨다.
 val newList  = list  + listOf(4,5)
 ```
+### 단항 연산자 오버로딩
+- 단항연산자를 오버로딩하는 절차도 이항 연산자와 마찬가지다.
+```kotlin
+operator fun Point.unaryMinus() = Point(-x, -y)
+```
+- 단항 연산자를 오버로딩하기 위해 사용하는 함수는 인자를 취하지 않는다.
+- 코틀린에서 오버로딩할 수 있는 모든 단항 연산자는 아래와 같다.
+    + +a : unaryPlus
+    + -a : unaryMinus
+    + !a : not
+    + ++a, a++ : inc
+    + --a, a-- : dec
+
+### 비교 연산자 오버로딩
+- 코틀린에서는 == 비교 연산자를 직접 사용할 수 있어 비교 코드가 equals나 compareTo를 사용한 코드보다 더 직관적이다.
+
+### 동등성 연산자 : equals
+- 코틀린이 == 연산자를 equals ㅁ ㅔ소드 호출하며, != 연산자를 사용하는 식도 equals 호출로 컴파일된다.
+- 식별자 비교 연산자는 자바 == 연산자와 같고, 피연산자가 같은객체인지 체크한다.
+- equals 에는 override가 붙어 있다. 다른 연산자 오버로딩 관례와 달리  equals는 any에 정의된 메소드이므로 override가 필요하다.
+- Any에는 Operator가 붙어있지만, override된 메소드 앞에는 붙이지 않아도 자동 적용된다.
+```kotlin
+(a == b) → (a?.equals(b) ?: (b == null))
+// a가 널이라면 b도 널인 경우에만 결과가 true다.
+//아래 equals 함수에는 override 가 붙어있다. 다른 연산자 오버로딩 관례와 달리 equals는 Any에 정의된 메소드이므로 override가 필요하다. 또한 Any에서 상속받은 equals가 확장 함수보다 우선순위가 높기 때문에 equals를 확장 함수로 정의할 수는 없다.
+data class Point(val x: Int, val y: Int){
+    override fun equals(other: Any?): Boolean {
+        if(other === this) return true // this와 같은 객체인지 검사
+        if(other !is Point) return false // 같은 타입인지 검사
+        return other.x == x && other.y == y
+    }
+}
+```
+## 순서 연산자: compareTo
+- 코틀린도 자바와 같은 Comparable 인터페이스를 지원한다. 코틀린은 Comparable 인터페이스 안에 있는 compareTo 메소드를 호출하는 관례를 제공한다. 따라서 <, >, ≥, ≤ 는 compareTo로 호출된다.
+```kotlin
+(a >= b) → (a.compareTo(b) >= 0)
+compareTo 메소드 구현하기
+class Person(val firstName: String, val lastName: String): Comparable<Person>{
+    override fun compareTo(other: Person): Int {
+      // 인자로 받은 함수를 차례로 호출하면서 값을 비교한다.
+      return compareValuesBy(this, other, 
+                    Person::firstName, Person::lastName)
+    }
+}
+```
+
+- compareValuesBy 는 첫 번째 비교 함수에 두 객체를 넘겨서 두 객체가 같지 않다는 결과(0이 아닌 값)가 나오면 그 결과 값을 즉시 반환하고, 아니면 계속 비교한다. 모든 함수가 0을 반환하면 0을 반환한다.
+- compareValuesBy는 이런식으로 두 객체의 대소를 알려주는 0이 아닌 값이 처음 나올 때까지 인자로 받은 함수를 차례로 호출해 두 값을 비교하며, 모든 함수가 0을 반환하면 0을 반환한다.
+- 각 비교 함수는 람다나 프로퍼티/메소드 참조  일 수 있다.
+-  그렇지만 필드를 직접 비교하면, 코드는 복잡하지만 속도는  더 빨라 진다는  사실을 기억해야 한다.
+    + 언제나 그렇듯 처음에는 성능을 신경쓰지 말고 이해하기 쉬운 간결한 코드를 작성하고, 추후 성능이 문제되면 개선하라
+- Comparable 인터페이스를 구현하는 모든 자바 클래를 코틀린에서는 간결한 연산자 구문으로 비교할 수 있다.
+
+```kotlin
+println("abc" < "bac")
+```
