--- a/책/kotlin-in-action/7. 연산자오버로딩과 기타관례.md
+++ b/책/kotlin-in-action/7. 연산자오버로딩과 기타관례.md
@@ -1,4 +1,4 @@
-# 연산자 오버로딩
+>7.1 연산자 오버로딩
 - 어떤 클래스 안에 plus 라는 이름의 특별한 메소드를 정의하면 그 클래스의 인스턴스에 대해 + 연산자를 사용할 수 있다. 이런 식으로 어떤 언어 기능과 미리 정해진 이름의 함수를 연결해주는 기법을 코틀린에서는 관례(Convention)라고 부른다.
 - 언어 기능을 타입에 의존하는 자바와 달리 코틀린은 (함수 이름을 통한) 관례에 의존한다. 이런 관례를 채택한 이유는 기존 자바 클래스를 코틀린 언어에 적용하기 위함이다.
 -  기존  자바 클래스가 구현하는 인터페이스는  이미 고정돼 있고 코틀린 쪽에서 자바 클래스가 새로운ㄴ 인터페이스를 구현하게 만들 수는 없다.
@@ -85,7 +85,7 @@ operator fun Point.unaryMinus() = Point(-x, -y)
     + ++a, a++ : inc
     + --a, a-- : dec
 
-### 비교 연산자 오버로딩
+>7.2 비교 연산자 오버로딩
 - 코틀린에서는 == 비교 연산자를 직접 사용할 수 있어 비교 코드가 equals나 compareTo를 사용한 코드보다 더 직관적이다.
 
 ### 동등성 연산자 : equals
@@ -128,4 +128,129 @@ class Person(val firstName: String, val lastName: String): Comparable<Person>{
 
 ```kotlin
 println("abc" < "bac")
+```
+
+> 7.3 컬렉션과 범위에 대해 쓸 수 있는 관례
+- 컬렉션을 다룰 때 가장 많이 쓰는 연산은 인덱스를 사용해 원소를 읽거나 쓰는 연산과 어떤 값이 컬렉션에 속해 있는지 검사하는 연산
+    + 읽기 쓰기 a[b] = "a", a[b]
+    + 검사 = in
+    
+### 인덱스로 원소에 접근
+- 인덱스 연산자도 관례를 따른다.
+    + 인덱스 연산자를 사용해 원소를 읽는 연산은 get 연산자 메소드로 변환되고, 원소를 쓰는 연산은 set 메소드로 변환된다.
+
+### get 관례 구현: [] 원소 접근에 대한 관례 구현
+```kotlin
+operator fun Point.get(index: Int): Int {
+    return when(index) {
+        0 -> x
+        1 -> y
+        else -> throw java.lang.IndexOutOfBoundsException 
+    }
+//
+val p = Point(10, 20)
+println(p[1])
+}
+```    
+- 위 예는 Int에 대한 예이지만 컬렉션 클래스가 다양한 키 타입을 지원해야한다면, 여러 타입에 대한 오버로딩한 get 메소드를 설정하면 된다.
+
+### set 관례 구현
+```kotlin
+data class MutablePoint(var x: Int, var y: Int)
+
+operator fun MutablePoint.set(index: Int, value: Int) {
+    when(index) {
+        0 -> x = value
+        1 -> y = value
+        else -> throw java.lang.IndexOutOfBoundsException
+    }
+}
+
+...
+p[1] = 42
+```
+
+### in 관례 구현
+- 컬렉션이 지원하는 다른 연산자로는 in이 있다. in 연산자는 contains 함수를 구현하면 된다.
+```kotlin
+data class Rectangle(val upperLeft: Point, val lowerRight: Point)
+
+operator fun Rectangle.contains(p: Point): Boolean {
+    return p.x in upperLeft.x until lowerRight.x &&
+        p.y in upperLeft.y until lowerRight.y
+}
+
+> Point(1,2) in  Rectangle(Point(0,0), Point(3,3))
+```
+- in 우항에 있는 객체는 contains의 수신 객체가 되고, 좌항에 있는 객체는 인자로 전달된다.
+
+
+### rangeTo 관례
+- .. 구문을 만드려면 rangeTo 함수를 구현해야 한다.
+    + start..end == start.rangeTo(end)
+- 코틀린 표준 라이브러리에 comparable에 대한 rangeTo 확장함수를 정의하고 있어서, comparable 인터페이스를 구현했다면 따로  구혆날 필요는 없다.
+```kotlin
+val now = LocalDateTime.now()
+now..now.plusDay(10)
+
+// .. 연산자는 우선순위가 낮아서 왠만하면 괄호로 감싸는 것을  권장한다.
+// 괄호로 감싸지 않은 경우 10의 우선순위가 0..10 보다 높다.
+(0..10).forEach()
+```     
+
+### for 루프를 위한 iterator 관례
+- 코틀린의 for 루프는 범위 검사와 똑같이 in 연산자를 사용한다.
+
+- 하지만 이경우 in의 의미는 다르다. for (x in list) {...}와 같은 문장은  list.iterator()를 호출한다음 자바와 마찬가지로 hasNext, next 호출을  반복하는 식으로  변환된다.
+
+- 코틀린에서 for (x in list) 또한 관례이므로 표준라이브러리 확장함수에 정의되어 있다.
+- 커스텀 구현 예
+```kotlin
+// closeRange의 타입 확장과 iterator 구현을 통해 for 루프 in 관례를 설정할 수 있다.
+operator fun closedRange<LocalDate>.iterator(): Iterator<LocalDate> =
+object : Iterator<LocalDate> {
+    ...
+}
+
+val newYear =  LocalDate.now()
+val daysOff = newYear.minusDays(1)..newYear // closedRange 를 반환한다.
+
+for(dayOff in daysOff) {...}
+for(number in 1 rangeTo 10) {...}
+```
+
+- closeRange는 comparableInterface를 구현한 인터페이스.
+```kotlin
+/*
+ * Copyright 2010-2019 JetBrains s.r.o. and Kotlin Programming Language contributors.
+ * Use of this source code is governed by the Apache 2.0 license that can be found in the license/LICENSE.txt file.
+ */
+
+package kotlin.ranges
+
+/**
+ * Represents a range of values (for example, numbers or characters).
+ * See the [Kotlin language documentation](https://kotlinlang.org/docs/reference/ranges.html) for more information.
+ */
+public interface ClosedRange<T: Comparable<T>> {
+    /**
+     * The minimum value in the range.
+     */
+    public val start: T
+
+    /**
+     * The maximum value in the range (inclusive).
+     */
+    public val endInclusive: T
+
+    /**
+     * Checks whether the specified [value] belongs to the range.
+     */
+    public operator fun contains(value: T): Boolean = value >= start && value <= endInclusive
+
+    /**
+     * Checks whether the range is empty.
+     */
+    public fun isEmpty(): Boolean = start > endInclusive
+}
 ```
